v1.56.0 — third senior review: security + frozen-SPI corrections + coherence (#147)
* review: the third senior review — five lenses, fixes for what they proved (v1.56.0)

Five read-only lenses over everything shipped since the v1.39.0 idiom
pass (v1.40–v1.55). The house laws held; what the lenses proved got
fixed, with the frozen Device SPI corrected while it is a day old with
no external consumers.

Security: the Tools ▸ Options 'Rack & Cloud' panel wrote DO/Hetzner/
Cloudflare API tokens to PLAINTEXT NbPreferences (nmox/cloud) — the one
keyring bypass the v1.36 sweep missed. Now to the OS keychain off the
EDT under CloudTokens' own nmox.cloud.* scheme, password buffer zeroed;
source-gate-pinned against any plaintext path.

Device SPI (additive to the frozen contract):
- DeviceLogic.onAttached(services) default hook — the host calls it on
  first mount AND undo re-attach, so a plugin can re-arm a poll/clock or
  re-announce serving a removal tore down. Closes the v1.50 TAIL/TEMPO
  re-attach bug class for third parties. Mutation-proven.
- build() guarded on all three mount paths (was: only drag-drop) — a
  throwing or stale-classloader plugin can no longer put an uncaught
  exception on the EDT from the palette double-click or Quick Search.
- onDispose() now runs after the process is stopped, making its javadoc
  true; mutation-proven with a live sleep process.
- Port count capped at validation (~8/side) so jacks can't paint
  off-plate and fail contract law #2.

Coherence & idioms:
- The daily update heads-up and the platform's weekly autoupdate now
  converge on the in-app Plugin Manager (Actions.forID System/
  PluginManagerAction, verified in the platform layer) instead of two
  contradictory destinations; web page is the fallback.
- Project Studio's 'Open as project' findProject scan moved off the EDT.

Docs truth: device counts 44/43 → 45 (README ×2, user-guide); -proc note
JDK 21 → 23 (matches the pom); core.spi.device in the module table;
ledger 31 refreshe